--- a/index.html
+++ b/index.html
@@ -136,24 +136,28 @@
 	    </div>
 	  </nav>
 	  <section id="home-section" class="hero">
-		  <div class="home-slider  owl-carousel">
-	       <div class="slider-item ">
-	      	<div class="overlay"></div>
-	         <div class="container">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-			  <div class="one-third js-fullheight order-md-last img" 
-				  style="background-image: url(images/shubham4.png); 
-				  width: 150px; 
-            			  height: 150px; 
-           			  background-size: cover; 
-            			  background-position: center; 
-           			  border-radius: 50%; 
-                        	  border: 3px solid #fff; 
-            			  overflow: hidden;">
-                          </div>
+		  <div class="home-slider owl-carousel">
+			  <div class="slider-item">
+				  <div class="overlay"></div>
+				  <div class="container">
+					  <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+						  <div class="one-third js-fullheight order-md-last img" 
+							  style="background-image: url(images/shubham4.png); 
+							  width: 150px; 
+                               			          height: 150px; 
+                               				  background-size: cover; 
+                               				  background-position: center; 
+                               				  border-radius: 50%; 
+                               				  border: 3px solid #fff; 
+                               				  overflow: hidden; 
+                               				  position: relative;">
+						  </div>
+                			   </div>
+            			  </div>
+       				  </div>
+    			  </div>
+	  </section>
 
-	          	 <div class="overlay"></div>
-	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Building Smart Solutions with AI & ML</span>
