--- a/index.html
+++ b/index.html
@@ -143,14 +143,16 @@
 					  <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 						  <div class="one-third js-fullheight order-md-last img" 
 							  style="background-image: url(images/shubham4.png); 
-							  width: 150px; 
-                               			          height: 150px; 
-                               				  background-size: cover; 
-                               				  background-position: center; 
-                               				  border-radius: 50%; 
-                               				  border: 3px solid #fff; 
-                               				  overflow: hidden; 
-                               				  position: relative;">
+          						  width: 150px; 
+           						  height: 150px; 
+           						  border-radius: 50%; 
+          						  background-size: cover; 
+           						  background-position: center; 
+           						  overflow: hidden; 
+           						  display: flex; 
+           						  align-items: center; 
+           					          justify-content: center; 
+           						  border: 3px solid white;">
 						  </div>
                 			   </div>
             			  </div>
