--- a/index.html
+++ b/index.html
@@ -140,20 +140,7 @@
 			  <div class="slider-item">
 				  <div class="overlay"></div>
 				  <div class="container">
-					  <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-						  <div class="one-third js-fullheight order-md-last img" 
-							  style="background-image: url(images/shubham4.png); 
-          						  width: 300px; 
-           						  height: 120px; 
-           						  border-radius: 50%; 
-          						  background-size: cover; 
-           						  background-position: center; 
-           						  overflow: hidden; 
-           						  display: flex; 
-           						  align-items: center; 
-           					          justify-content: center; 
-           						  border: 3px solid white;">
-						  </div>
+					  <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/shubham4.png);">
                 			   </div>
             			  </div>
        				  </div>
